manifests/kubernetes-dashboard/services.yaml
---
apiVersion: v1
kind: "Service"
metadata:
  name: "kubernetes-dashboard"
  namespace: "kubernetes-dashboard"
  annotations:
    lbipam.cilium.io/ips: "192.168.1.52"
spec:
  type: "LoadBalancer"
  selector:
    app.kubernetes.io/component: "app"
    app.kubernetes.io/instance: "kubernetes-dashboard"
    app.kubernetes.io/name: "kong"
  ports:
    - port: 443
      targetPort: 8443
      protocol: "TCP"
